feat : implemented JPArepository