@@ -2,11 +2,13 @@ package com.sprint.mission.discodeit.service.basic;
 
 import com.sprint.mission.discodeit.dto.channel.ChannelUpdateDto;
 import com.sprint.mission.discodeit.entity.Channel;
+import com.sprint.mission.discodeit.entity.ReadStatus;
+import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.error.ErrorCode;
 import com.sprint.mission.discodeit.exception.CustomException;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
+import com.sprint.mission.discodeit.repository.ReadStatusRepository;
 import com.sprint.mission.discodeit.service.ChannelService;
-import com.sprint.mission.discodeit.validator.EntityValidator;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
@@ -14,6 +16,9 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -21,8 +26,9 @@ import java.util.Objects;
 @RequiredArgsConstructor
 public class BasicChannelService implements ChannelService {
 
-  private final EntityValidator validator;
   private final ChannelRepository channelRepository;
+  private final ReadStatusRepository readStatusRepository;
+
 
   @Override
   public Channel createPrivateChannel(Channel channel) {
@@ -35,61 +41,55 @@ public class BasicChannelService implements ChannelService {
     return channelRepository.save(channel);
   }
 
-
   @Override
-  public void validateUserAccess(Channel channel, String userId) {
-    if (Objects.equals(channel.getChannelType(), Channel.ChannelType.PRIVATE)) {
-      channel.getParticipatingUsers().stream().filter(id -> id.equals(userId)).findAny().orElseThrow(
-          () -> new CustomException(ErrorCode.DEFAULT_ERROR_MESSAGE)
-      );
+  public void validateUserAccess(Channel channel, User user) {
+    if (Objects.equals(channel.getType(), Channel.ChannelType.PRIVATE)) {
+      Optional<ReadStatus> status = readStatusRepository.findByUserAndChannel(user, channel);
+      if (status.isEmpty()) {
+        throw new CustomException(ErrorCode.NO_ACCESS_TO_CHANNEL);
+      }
     }
   }
 
   @Override
-  public Channel getChannelById(String channelId) {
-    return validator.findOrThrow(Channel.class, channelId, new CustomException(ErrorCode.CHANNEL_NOT_FOUND));
-  }
+  public Channel findChannelById(String channelId) {
+    return channelRepository.findById(UUID.fromString(channelId))
+        .orElseThrow(() -> new CustomException(ErrorCode.CHANNEL_NOT_FOUND));
 
+  }
 
   @Override
-  public List<Channel> findAllChannelsByUserId(String userId) {
+  public List<Channel> findAllPublicOrChannelsIn(List<UUID> channelIds){
+    // TODO : 한번에 가져오는 쿼리
+    List<Channel> privateVisible = channelRepository.findAllById(channelIds);
+    List<Channel> publicChannel = channelRepository.findAllByType(Channel.ChannelType.PUBLIC);
 
-    List<Channel> allChannels = channelRepository.findAll();
 
-    return allChannels.stream()
-        .filter(channel -> !Objects.equals(channel.getChannelType(), Channel.ChannelType.PRIVATE)
-            || (Objects.equals(channel.getChannelType(), Channel.ChannelType.PRIVATE)
-                && channel.getParticipatingUsers().contains(userId)))
-        .toList();
-
+    return List.of(privateVisible, publicChannel).stream()
+        .flatMap(List::stream).collect(Collectors.toList());
   }
+
 
   @Override
   public Channel updateChannel(String channelId, ChannelUpdateDto dto) {
 
-    Channel channel = validator.findOrThrow(Channel.class, channelId, new CustomException(ErrorCode.CHANNEL_NOT_FOUND));
+    Channel channel = channelRepository.findById(UUID.fromString(channelId)).orElseThrow(
+      () -> new CustomException(ErrorCode.CHANNEL_NOT_FOUND)
+    );
 
-    if (Objects.equals(channel.getChannelType(), Channel.ChannelType.PRIVATE)) {
+    if (Objects.equals(channel.getType(), Channel.ChannelType.PRIVATE)) {
       throw new CustomException(ErrorCode.PRIVATE_CHANNEL_CANNOT_BE_UPDATED);
     }
 
     channel.updateChannelName(dto.newName());
     channel.updateDescription(dto.newDescription());
-    channel.updateUpdatedAt();
 
-    return channelRepository.update(channel);
+    return channelRepository.save(channel);
   }
 
   @Override
   public void deleteChannel(String channelId) {
-    validator.findOrThrow(Channel.class, channelId, new CustomException(ErrorCode.CHANNEL_NOT_FOUND));
-
-    channelRepository.delete(channelId);
-  }
-
-  @Override
-  public String generateInviteCode(Channel channel) {
-    return null;
+    channelRepository.deleteById(UUID.fromString(channelId));
   }
 
 }
